// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DatabaseConfigurationModal/> Editable 1`] = `
<Modal
  animation={true}
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={false}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h4"
    >
      Configure Database Authentication
      <FontAwesomeIcon
        border={false}
        className="modal__close-icon"
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              352,
              512,
              Array [],
              "f00d",
              "M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z",
            ],
            "iconName": "times",
            "prefix": "fas",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        onClick={[Function]}
        pull={null}
        pulse={false}
        rotation={null}
        size="sm"
        spin={false}
        swapOpacity={false}
        symbol={false}
        title=""
        transform={null}
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <div
      className="database-modal__field-row"
    >
      <span>
        Password Strength:
      </span>
      <span
        className="database-modal__field"
      >
        <ButtonGroup
          block={false}
          bsClass="btn-group"
          justified={false}
          onClick={[Function]}
          vertical={false}
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            data-key="1"
            disabled={false}
            name="strength"
            value="Weak"
          >
            Weak
          </Button>
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            data-key="2"
            disabled={false}
            name="strength"
            value="Strong"
          >
            Strong
          </Button>
        </ButtonGroup>
      </span>
    </div>
    <div
      className="bold-text"
    >
       Weak 
    </div>
    <div>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "",
          }
        }
      />
    </div>
    <br />
    <div
      className="bold-text"
    >
       Strong 
    </div>
    <div>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "",
          }
        }
      />
    </div>
    <br />
    <div
      className="database-modal__field-row"
    >
      <span>
        Password Expiration:
      </span>
      <span
        className="database-modal__field"
      >
        <FormControl
          bsClass="form-control"
          componentClass="select"
          name="expiration"
          onChange={[Function]}
          placeholder="select"
          value=""
        >
          <option
            value="Never"
          >
            Never
          </option>
          <option
            value="FiveSeconds"
          >
            Every five seconds — for testing
          </option>
          <option
            value="ThreeMonths"
          >
            Every three months
          </option>
          <option
            value="SixMonths"
          >
            Every six months
          </option>
          <option
            value="OneYear"
          >
            Every twelve months
          </option>
        </FormControl>
      </span>
    </div>
    <div
      className="database-modal__bottom"
    >
      <div
        className="modal__bottom-buttons"
      >
        <a
          className="modal__help-link"
          href={null}
          target="_blank"
        >
          More about authentication
        </a>
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="default"
          className="labkey-button primary"
          disabled={false}
          onClick={[Function]}
        >
          Apply
        </Button>
      </div>
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        className="labkey-button modal__save-button"
        disabled={false}
      >
        Cancel
      </Button>
    </div>
  </ModalBody>
</Modal>
`;

exports[`<DatabaseConfigurationModal/> View-only 1`] = `
<Modal
  animation={true}
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  show={true}
>
  <ModalHeader
    bsClass="modal-header"
    closeButton={false}
    closeLabel="Close"
  >
    <ModalTitle
      bsClass="modal-title"
      componentClass="h4"
    >
      Configure Database Authentication
      <FontAwesomeIcon
        border={false}
        className="modal__close-icon"
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              352,
              512,
              Array [],
              "f00d",
              "M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z",
            ],
            "iconName": "times",
            "prefix": "fas",
          }
        }
        inverse={false}
        listItem={false}
        mask={null}
        onClick={[Function]}
        pull={null}
        pulse={false}
        rotation={null}
        size="sm"
        spin={false}
        swapOpacity={false}
        symbol={false}
        title=""
        transform={null}
      />
    </ModalTitle>
  </ModalHeader>
  <ModalBody
    bsClass="modal-body"
    componentClass="div"
  >
    <div
      className="database-modal__field-row"
    >
      <span>
        Password Strength:
      </span>
      <span
        className="database-modal__field"
      >
        <ButtonGroup
          block={false}
          bsClass="btn-group"
          justified={false}
          onClick={[Function]}
          vertical={false}
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            data-key="1"
            disabled={true}
            name="strength"
            value="Weak"
          >
            Weak
          </Button>
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            data-key="2"
            disabled={true}
            name="strength"
            value="Strong"
          >
            Strong
          </Button>
        </ButtonGroup>
      </span>
    </div>
    <div
      className="bold-text"
    >
       Weak 
    </div>
    <div>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "",
          }
        }
      />
    </div>
    <br />
    <div
      className="bold-text"
    >
       Strong 
    </div>
    <div>
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "",
          }
        }
      />
    </div>
    <br />
    <div
      className="database-modal__field-row"
    >
      <span>
        Password Expiration:
      </span>
      <span
        className="database-modal__field"
      />
    </div>
    <div
      className="database-modal__bottom"
    >
      <div
        className="modal__bottom-buttons"
      >
        <a
          className="modal__help-link"
          href={null}
          target="_blank"
        >
          More about authentication
        </a>
      </div>
      <Button
        active={false}
        block={false}
        bsClass="btn"
        bsStyle="default"
        className="labkey-button modal__save-button"
        disabled={false}
      >
        Close
      </Button>
    </div>
  </ModalBody>
</Modal>
`;
